--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,20 +2,32 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:MediaPlayer"
-        Title="Media Player" Height="400" Width="550" ResizeMode="NoResize">
+        Title="Media Player" Height="305" Width="524" MinWidth="600" MinHeight="400">
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
-    <Grid>
-        <TextBox x:Name="SearchField" HorizontalAlignment="Left" Height="21" Margin="161,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="232" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField">
-            <TextBox.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0.203"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </TextBox.RenderTransform>
-        </TextBox>
+    <Grid Margin="0">
+        <TabControl Margin="10,10,10,52.5">
+            <TabItem Header="Now playing">
+                <Grid Background="#FFE5E5E5">
+                    <ListBox x:Name="playlistList" Margin="0,10,10,39" RenderTransformOrigin="1,0.5" HorizontalAlignment="Right" Width="200"/>
+                    <MediaElement x:Name="mediaElement" Margin="10,10,215,10"/>
+                    <TextBox x:Name="playlistSearch" Margin="0,0,10,10" TextWrapping="Wrap" Text="Search" HorizontalAlignment="Right" Width="200" Height="24" VerticalAlignment="Bottom"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Library">
+                <Grid Background="#FFE5E5E5">
+                    <TextBox x:Name="librarySearch" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom" Text="Search"/>
+                    <ListBox x:Name="libraryList" Margin="10,10,10,39"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
+        <Grid Margin="10,0,10,10.5" Height="37" VerticalAlignment="Bottom">
+            <Button x:Name="playButton" Content="Play" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Width="76" Click="Button_Click"/>
+            <Button x:Name="pauseButton" Content="Pause" HorizontalAlignment="Left" Margin="91,0,0,0" VerticalAlignment="Center" Width="76" Click="Button_Click"/>
+            <Button x:Name="stopButton" Content="Stop" HorizontalAlignment="Left" Margin="172,0,0,0" VerticalAlignment="Center" Width="76" Click="Button_Click"/>
+            <Slider x:Name="volumeSlider" Margin="0,0,10,9" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="122"/>
+            <ProgressBar x:Name="playProgression" Height="18" Margin="253,10,137,9" VerticalAlignment="Center"/>
+        </Grid>
     </Grid>
 </Window>
