--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,12 +12,12 @@
                 <Grid Background="#FFE5E5E5">
                     <ListBox x:Name="playlistList" Margin="0,10,10,39" RenderTransformOrigin="1,0.5" HorizontalAlignment="Right" Width="200"/>
                     <MediaElement x:Name="mediaElement" Margin="10,10,215,10"/>
-                    <TextBox x:Name="playlistSearch" Margin="0,0,10,10" TextWrapping="Wrap" Text="Search" HorizontalAlignment="Right" Width="200" Height="24" VerticalAlignment="Bottom"/>
+                    <TextBox x:Name="playlistSearch" Margin="0,0,10,10" TextWrapping="Wrap" Text="" HorizontalAlignment="Right" Width="200" Height="24" VerticalAlignment="Bottom"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Library">
                 <Grid Background="#FFE5E5E5">
-                    <TextBox x:Name="librarySearch" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom" Text="Search"/>
+                    <TextBox x:Name="librarySearch" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom"/>
                     <ListBox x:Name="libraryList" Margin="10,10,10,39"/>
                 </Grid>
             </TabItem>
