--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,6 +21,31 @@
                     <ListBox x:Name="libraryList" Margin="10,10,10,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}"/>
                 </Grid>
             </TabItem>
+            <TabItem Header="Music" Margin="-2,0">
+                <Grid Background="#FFE5E5E5">
+                    <TextBox x:Name="librarySearch1" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom"/>
+                    <ListBox x:Name="libraryList1" Margin="10,44,0,39" HorizontalAlignment="Left" Width="163">
+                        <ListBox x:Name="libraryList1_Copy1" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}" HorizontalAlignment="Left" Width="163" Height="229"/>
+                    </ListBox>
+                    <ListBox x:Name="libraryList1_Copy" Margin="178,44,0,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}" HorizontalAlignment="Left" Width="184"/>
+                    <ListBox x:Name="libraryList1_Copy2" Margin="367,44,0,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}" HorizontalAlignment="Left" Width="189"/>
+                    <Label Content="Artist" HorizontalAlignment="Left" Margin="73,18,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.308"/>
+                    <Label Content="Album" HorizontalAlignment="Left" Margin="244,18,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.308"/>
+                    <Label Content="Music" HorizontalAlignment="Left" Margin="440,18,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.308"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Images" Margin="-2,0">
+                <Grid Background="#FFE5E5E5">
+                    <TextBox x:Name="librarySearch2" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom"/>
+                    <ListBox x:Name="libraryList2" Margin="10,10,10,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Videos" Margin="-2,0">
+                <Grid Background="#FFE5E5E5">
+                    <TextBox x:Name="librarySearch3" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom"/>
+                    <ListBox x:Name="libraryList3" Margin="10,10,10,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}"/>
+                </Grid>
+            </TabItem>
         </TabControl>
         <Grid Margin="10,0,10,10.5" Height="37" VerticalAlignment="Bottom">
             <Button x:Name="playButton" Content="Play" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Width="76"/>
