--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,58 +1,117 @@
-﻿<Window x:Class="MediaPlayer.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:MediaPlayer"
-        Title="Media Player" Height="305" Width="524" MinWidth="600" MinHeight="400">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MediaPlayer.MainWindow"
+        Title="Sharplayer" Height="314" Width="517" MinWidth="600" MinHeight="400" FontFamily="FontAw">
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
     <Grid Margin="0">
-        <TabControl Margin="10,10,10,52.5">
-            <TabItem Header="Now playing">
-                <Grid Background="#FFE5E5E5">
-                    <ListBox x:Name="playlistList" Margin="0,10,10,39" RenderTransformOrigin="1,0.5" HorizontalAlignment="Right" Width="200"/>
-                    <MediaElement x:Name="mediaElement" Margin="10,10,215,10"/>
-                    <TextBox x:Name="playlistSearch" Margin="0,0,10,10" TextWrapping="Wrap" Text="" HorizontalAlignment="Right" Width="200" Height="24" VerticalAlignment="Bottom"/>
-                </Grid>
-            </TabItem>
-            <TabItem Header="Library">
-                <Grid Background="#FFE5E5E5">
-                    <TextBox x:Name="librarySearch" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom"/>
-                    <ListBox x:Name="libraryList" Margin="10,10,10,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}"/>
-                </Grid>
-            </TabItem>
-            <TabItem Header="Music" Margin="-2,0">
-                <Grid Background="#FFE5E5E5">
-                    <TextBox x:Name="librarySearch1" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom"/>
-                    <ListBox x:Name="libraryList1" Margin="10,44,0,39" HorizontalAlignment="Left" Width="163">
-                        <ListBox x:Name="libraryList1_Copy1" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}" HorizontalAlignment="Left" Width="163" Height="229"/>
-                    </ListBox>
-                    <ListBox x:Name="libraryList1_Copy" Margin="178,44,0,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}" HorizontalAlignment="Left" Width="184"/>
-                    <ListBox x:Name="libraryList1_Copy2" Margin="367,44,0,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}" HorizontalAlignment="Left" Width="189"/>
-                    <Label Content="Artist" HorizontalAlignment="Left" Margin="73,18,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.308"/>
-                    <Label Content="Album" HorizontalAlignment="Left" Margin="244,18,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.308"/>
-                    <Label Content="Music" HorizontalAlignment="Left" Margin="440,18,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.308"/>
-                </Grid>
-            </TabItem>
-            <TabItem Header="Images" Margin="-2,0">
-                <Grid Background="#FFE5E5E5">
-                    <TextBox x:Name="librarySearch2" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom"/>
-                    <ListBox x:Name="libraryList2" Margin="10,10,10,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}"/>
-                </Grid>
-            </TabItem>
-            <TabItem Header="Videos" Margin="-2,0">
-                <Grid Background="#FFE5E5E5">
-                    <TextBox x:Name="librarySearch3" Margin="10,0,10,10" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" TextChanged="SearchMedia" ToolTip="SearchField" Height="24" VerticalAlignment="Bottom"/>
-                    <ListBox x:Name="libraryList3" Margin="10,10,10,39" ItemsSource="{Binding MediaPlayer.DisplayableMediaList, Mode=OneWay}"/>
-                </Grid>
-            </TabItem>
-        </TabControl>
-        <Grid Margin="10,0,10,10.5" Height="37" VerticalAlignment="Bottom">
-            <Button x:Name="playButton" Content="Play" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Width="76"/>
-            <Button x:Name="pauseButton" Content="Pause" HorizontalAlignment="Left" Margin="91,0,0,0" VerticalAlignment="Center" Width="76"/>
-            <Button x:Name="stopButton" Content="Stop" HorizontalAlignment="Left" Margin="172,0,0,0" VerticalAlignment="Center" Width="76"/>
-            <Slider x:Name="volumeSlider" Margin="0,0,10,9" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="122"/>
-            <ProgressBar x:Name="playProgression" Height="18" Margin="253,10,137,9" VerticalAlignment="Center"/>
+        <Grid x:Name="ContentGrid" Margin="150,0,0,40" Background="Black">
+            <TextBlock x:Name="musicIcon" Margin="177,115,180,121" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome"><Span><Run Text="&#xF001;"/></Span></TextBlock>
+            <TextBlock x:Name="title" Margin="0,0,19,37" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="51"><Run Language="fr-fr" Text="Alive"/></TextBlock>
+            <TextBlock x:Name="artist" HorizontalAlignment="Left" Margin="284,296,0,0" TextWrapping="Wrap" VerticalAlignment="Top" TextAlignment="Right" Width="142" FontSize="16" Foreground="#FFDFE1E5"><Run Language="fr-fr" Text="Empire of the sun"/></TextBlock>
         </Grid>
+
+
+        <Border x:Name="BotomBarBorder" BorderBrush="#FF303030" BorderThickness="0,1,0,0" Background="#FF161616" Height="40" VerticalAlignment="Bottom">
+            <Grid x:Name="BotomBarGrid" Margin="0,-1,0,0" >
+                <Grid.Background>
+                    <SolidColorBrush Color="Black" Opacity="0"/>
+                </Grid.Background>
+                <Button x:Name="backwardButton" Content="&#xF04A;" HorizontalAlignment="Left" Width="42" FontFamily="FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="0,6.332,0,2.667" Height="30">
+                    <Button.BorderBrush>
+                        <SolidColorBrush Color="#FF707070" Opacity="0"/>
+                    </Button.BorderBrush>
+                    <Button.Background>
+                        <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
+                    </Button.Background>
+                </Button>
+                <Button x:Name="playButton" Content="&#xF04B;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFC19BEB" BorderThickness="0" Margin="42,6.332,0,2.667" Height="30">
+                    <Button.BorderBrush>
+                        <SolidColorBrush Color="#FF707070" Opacity="0"/>
+                    </Button.BorderBrush>
+                    <Button.Background>
+                        <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
+                    </Button.Background>
+                </Button>
+                <Button x:Name="stopButton" Content="&#xF04D;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="84,6.332,0,2.667" Height="30">
+                    <Button.BorderBrush>
+                        <SolidColorBrush Color="#FF707070" Opacity="0"/>
+                    </Button.BorderBrush>
+                    <Button.Background>
+                        <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
+                    </Button.Background>
+                </Button>
+                <Button x:Name="forwardButton" Content="&#xF04E;" HorizontalAlignment="Left" Width="42" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="16" Foreground="#FFDFE1E5" BorderThickness="0" Margin="126,6.332,0,2.667" Height="30">
+                    <Button.BorderBrush>
+                        <SolidColorBrush Color="#FF707070" Opacity="0"/>
+                    </Button.BorderBrush>
+                    <Button.Background>
+                        <SolidColorBrush Color="#FFDDDDDD" Opacity="0"/>
+                    </Button.Background>
+                </Button>
+            </Grid>
+        </Border>
+        <Grid x:Name="SidebarGrid" Margin="0,0,0,40" HorizontalAlignment="Left" Width="200" >
+            <ListBox Foreground="#FFDFE1E5" Margin="0,0,50,0" BorderBrush="#FF303030" BorderThickness="0,0,1,0" Padding="5,0,0,0">
+                <ListBox.Background>
+                    <SolidColorBrush Color="#FF161616" Opacity="1"/>
+                </ListBox.Background>
+
+                <ListBoxItem Margin="0,10">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontFamily="Arial" Padding="0" FontWeight="SemiBold" Foreground="#FFC19BEB"><Run Language="fr-fr" Text="COMPUTER"/></TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+
+                <ListBoxItem>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Text="&#xF001;" Width="12" Height="12"/>
+                        <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Language="fr-fr" Text="Music"/></TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+                <ListBoxItem>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Width="12" Height="12"><Run Text="&#xF030;"/></TextBlock>
+                        <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Text="Photo"/></TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+
+
+                <ListBoxItem>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontFamily="FontAwesome" FontSize="11" Margin="0,2,0,0" Height="12" Width="12"><Run Text="&#xF008;"/></TextBlock>
+                        <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Text="Video"/></TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+                <ListBoxItem Margin="0,10">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontFamily="Arial" Padding="0" FontWeight="SemiBold" Foreground="#FFC19BEB"><Run Language="fr-fr" Text="PLAYLISTS"/></TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+                <ListBoxItem>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Text="&#xF001;" Width="12" Height="12"/>
+                        <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Language="fr-fr" Text="New Year Eve"/></TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+                <ListBoxItem>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Width="12" Height="12"><Run Text="&#xF030;"/></TextBlock>
+                        <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Language="fr-fr" Text="Summer 2014"/></TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+                <ListBoxItem>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" FontSize="11" Margin="0,2,0,0" Height="12" Width="12"><Run Text="&#xF008;"/></TextBlock>
+                        <TextBlock FontFamily="Arial" Padding="10,0,0,0"><Run Language="fr-fr" Text="Skateboard"/></TextBlock>
+                    </StackPanel>
+                </ListBoxItem>
+
+            </ListBox>
+        </Grid>
+
     </Grid>
 </Window>
