--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,10 +8,11 @@
         <local:MainWindowViewModel/>
     </Window.DataContext>
     <Grid Margin="0">
-        <Grid x:Name="ContentGrid" Margin="150,0,0,40" Background="Black">
-            <TextBlock x:Name="musicIcon" Margin="178.5,116.515,143.167,115.182" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" HorizontalAlignment="Center" Width="123.333" VerticalAlignment="Center" Height="100.803" TextAlignment="Center"><Span><Run Text="&#xF001;"/></Span></TextBlock>
+        <Grid x:Name="ContentGrid" Margin="150,0,0,44" Background="Black">
+            <TextBlock x:Name="musicIcon" Margin="0" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" HorizontalAlignment="Center" Width="183.333" TextAlignment="Center" LineHeight="29.333" VerticalAlignment="Center"><Span><Run Text="&#xF001;"/></Span></TextBlock>
             <TextBlock x:Name="title" Margin="0,0,19,37" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="51"><Run Language="fr-fr" Text="Alive"/></TextBlock>
             <TextBlock x:Name="artist" Margin="0,0,19,17.3" TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="#FFDFE1E5" Height="19.2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="142"><Run Language="fr-fr" Text="Empire of the sun"/></TextBlock>
+            <ContentControl Content="{Binding MyMediaElement}" HorizontalAlignment="Left" Margin="27.5,45.5,0,0" VerticalAlignment="Top" Height="110.4" Width="138.877" Foreground="Red" Background="Black"/>
         </Grid>
 
 
@@ -54,8 +55,8 @@
                 </Button>
             </Grid>
         </Border>
-        <Grid x:Name="SidebarGrid" Margin="0,0,0,40" HorizontalAlignment="Left" Width="200" >
-            <ListBox Foreground="#FFDFE1E5" Margin="0,0,50,0" BorderBrush="#FF303030" BorderThickness="0,0,1,0" Padding="5,0,0,0">
+        <Grid x:Name="SidebarGrid" Margin="0,0,0,44" HorizontalAlignment="Left" Width="150" >
+            <ListBox Foreground="#FFDFE1E5" BorderBrush="#FF303030" BorderThickness="0,0,1,0" Padding="5,0,0,0">
                 <ListBox.Background>
                     <SolidColorBrush Color="#FF161616" Opacity="1"/>
                 </ListBox.Background>
@@ -112,6 +113,7 @@
 
             </ListBox>
         </Grid>
+        <ProgressBar Height="4" Margin="0,0,0,40" VerticalAlignment="Bottom" Value="50" Foreground="#FFC19BEB" Background="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0"/>
 
     </Grid>
 </Window>
