--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -127,18 +127,52 @@
         <Slider x:Name="progressSlider" IsMoveToPointEnabled="true" HorizontalAlignment="Left" Margin="0,325.5,0,0" VerticalAlignment="Top" Width="595" Value="{Binding Path=SliderValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Minimum="0" Maximum="{Binding Path=SliderMaxValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Foreground="{x:Null}"/>
         <Grid ClipToBounds="True" Background="Black" Margin="150,0,0,44">
             <TabControl BorderBrush="{x:Null}" BorderThickness="0" Background="{x:Null}" Padding="0" Name="MainTabControl" SelectedIndex="{ Binding Path=SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }">
-        		<TabItem Header="TabItem" BorderBrush="{x:Null}" >
+        		<TabItem Header="Musique" BorderBrush="{x:Null}" >
         			<Grid Background="Black">
         				<TextBlock x:Name="artist" Margin="0,0,10,10" TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="#FFDFE1E5" Height="19.2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="142"><Run Language="fr-fr" Text="Empire of the sun"/></TextBlock>
         				<TextBlock x:Name="title" Margin="0,0,10,29.2" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="51"><Run Language="fr-fr" Text="Alive"/></TextBlock>
         				<TextBlock x:Name="musicIcon" Margin="130.834,105.648,130.833,105.648" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF001;"/></Span></TextBlock>
         			</Grid>
         		</TabItem>
-                <TabItem Header="TabItem" BorderBrush="{x:Null}" Margin="-2,-2,-2,0" IsSelected="{Binding DisplayXamlTab, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                <TabItem Header="Playlist" BorderBrush="{x:Null}" Margin="-2,-2,-2,0" IsSelected="{Binding DisplayXamlTab, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
         			<Grid Background="Black">
-        				<ListBox HorizontalAlignment="Left" Height="233" Margin="25.5,33.1,0,0" VerticalAlignment="Top" Width="365">
-        					<ListBoxItem Content="Test"/>
-        				</ListBox>
+        				<ListView x:Name="artistsListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="136">
+
+				
+
+						<ListView.View>
+						  <GridView>
+							<GridViewColumn Width="100" Header="Artist Name" />
+						  </GridView>
+						</ListView.View>
+
+
+        				</ListView>
+        				<ListView x:Name="albumsListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="162" Margin="136,0,0,0">
+
+				
+
+        					<ListView.View>
+        						<GridView>
+        							<GridViewColumn Width="100" Header="Album name" />
+        						</GridView>
+        					</ListView.View>
+
+
+        				</ListView>
+        				<ListView x:Name="titleListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="147" Margin="298,0,0,0">
+
+				
+
+        					<ListView.View>
+        						<GridView>
+									<GridViewColumn Width="10" Header="#" />
+        							<GridViewColumn Width="100" Header="Title Name" />
+        						</GridView>
+        					</ListView.View>
+
+
+        				</ListView>
         			</Grid>
         		</TabItem>
         	</TabControl>
