--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:MediaPlayer"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+       xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MediaPlayer.MainWindow"
         Title="Sharplayer" Height="144" Width="170" MinWidth="600" MinHeight="400" FontFamily="FontAw" Background="Black">
     <Window.DataContext>
@@ -136,7 +137,7 @@
         		</TabItem>
                 <TabItem Header="Playlist" BorderBrush="{x:Null}" Margin="-2,-2,-2,0" IsSelected="{Binding DisplayXamlTab, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
         			<Grid Background="Black">
-                        <ListView x:Name="artistsListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="136" ItemsSource="{Binding ArtistsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedArtist, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" >
+                        <ListView x:Name="artistsListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="136" ItemsSource="{Binding ArtistsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedArtist, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Background="Black" Foreground="#FFDFE1E5" BorderBrush="#FF303030" BorderThickness="0,0,1,0" >
 
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="MouseDoubleClick">
@@ -153,7 +154,7 @@
 
 
         				</ListView>
-                        <ListView x:Name="albumsListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="162" Margin="136,0,0,0" ItemsSource="{Binding AlbumsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedAlbum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" >
+                        <ListView x:Name="albumsListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="162" Margin="136,0,0,0" ItemsSource="{Binding AlbumsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedAlbum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Foreground="#FFC19BEB" Background="Black" BorderBrush="#FF303030" BorderThickness="0,0,1,0" >
 
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="MouseDoubleClick">
@@ -170,7 +171,7 @@
 
 
         				</ListView>
-                        <ListView x:Name="titleListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="147" Margin="298,0,0,0" ItemsSource="{Binding TrackList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" >
+                        <ListView x:Name="titleListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="147" Margin="298,0,0,0" ItemsSource="{Binding TrackList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Background="Black" Foreground="#FFC19BEB" BorderBrush="{x:Null}" BorderThickness="0" >
 
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="MouseDoubleClick">
